Fix scrolling issues on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -42,6 +42,8 @@ html {
 
 body {
 	@apply m-0 p-0;
+	/* Enable smooth momentum scrolling on iOS */
+	-webkit-overflow-scrolling: touch;
 }
 
 /* Custom sidebar link style */
